fix(core:control): layout issues from async render
- closes #6312
- closes #6313

--- a/packages/core/src/forms/control/control.element.scss
+++ b/packages/core/src/forms/control/control.element.scss
@@ -72,12 +72,8 @@ cds-control-action.status {
   padding-top: $cds-global-space-3;
 }
 
-:host([layout='horizontal']),
-:host([layout='horizontal-inline']),
-:host([layout='compact']) {
-  cds-internal-control-label[action='primary'] {
-    padding-top: $cds-global-space-5;
-  }
+:host(:not([layout*='vertical'])) cds-internal-control-label[action='primary'] {
+  padding-top: $cds-global-space-5;
 }
 
 :host([layout='compact']),
